# fivvt-backend

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
albums/: admin.py  models.py  router.py  serializers.py  urls.py
albums/migrations/: 0001_initial.py  0002_album_created_at_albumphoto_uploaded_at_and_more.py
board/: admin.py  forms.py  models.py  router.py  serializers.py  urls.py
board/migrations/: 0001_initial.py  0002_alter_memberofboard_biography_and_more.py  0002_alter_memberofboard_id.py  0003_alter_memberofboard_options_and_more.py
fivvt/: asgi.py  settings.py  urls.py  wsgi.py
fivvt/urls/: __init__.py  v0.py
hospitals/: admin.py  models.py  router.py  serializers.py  urls.py
hospitals/migrations/: 0001_initial.py  0002_alter_hospitalphone_hospital_and_more.py  0002_hospitalphone_comment_alter_hospitalphoto_hospital.py  0003_alter_hospitalphone_comment.py
